Send account override does not work with post to a mailing list
Ubuntu 20.04.1, Evolution 3.36.4-0ubuntu1
For one of the mailing lists I'm on I want to use my Gmail account instead of my default account. Under properties for the mailing list folder I set the send account override to my Gmail address. When I'm in the mailing list folder and click, from the top menu, Message > Mailing List > Post Message to List it comes up as my default send address which is not what I want. If I just click 'New' from the top menu it comes up with the correct send address however I have to enter the mailing list 'To' address. I had this same issue in Ubuntu 18.04 and I believe the Evolution version was 3.28.*
Edited by Milan Crha