I#1148 - Send account override does not work with post to a mailing list

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1148